--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
-@import 'base/variables';
+@import 'bace/variables';
+
 
 * {
     font-family: 'Museo Sans Curl', sans-serif;
@@ -8,3 +9,8 @@
     max-width: 950px;
     margin: 0 auto;
 }
+
+@import 'blocks/promo';
+@import 'blocks/header.scss';
+@import 'blocks/buttons';
+@import 'blocks/advantages';
