--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -43,7 +43,7 @@
         font-weight: 300;
         line-height: 18px;
 
-        span {
+        a {
             color: #F00;
             font-size: 14px;
             font-style: normal;
