--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -21,4 +21,11 @@
         text-align: center;
         font-size: 16px;
     }
+
+    &__submit {
+        width: 100%;
+        height: 55px;
+        color: #ffffff;
+        font-size: 16px;
+    }
 }
