--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,6 @@
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/title';
+@import 'blocks/forms';
