--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -10,6 +10,23 @@
     }
 }
 
+@media screen and (max-width: 1100px) {
+
+    button,
+    .prev,
+    .next {
+        img {
+            display: none;
+        }
+    }
+
+    .carousel__inner {
+        img {
+            width: 75%;
+        }
+    }
+}
+
 @media screen and (max-width: 940px) {
     .promo {
         background-position: 9%;
@@ -34,8 +51,17 @@
     .feed-form {
         margin: 36px auto;
     }
-}
 
+    .carousel {
+        padding: 30px 0;
+    }
+
+    .carousel__inner {
+        img {
+            width: 50%;
+        }
+    }
+}
 
 .advantages__icons {
     @media screen and (max-width: 822px) {
