--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -28,4 +28,10 @@
         color: #ffffff;
         font-size: 16px;
     }
+
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
+    }
 }
