--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -36,6 +36,7 @@
     }
 
     .tns-nav {
+        margin-top: 10px;
         position: absolute;
         bottom: -15%;
         /* Отступ снизу */
