--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -10,4 +10,15 @@
         font-weight: 500;
         line-height: 30px;
     }
+
+    .error {
+        border: 1px solid #ff0000;
+    }
+
+    label.error {
+        color: #FFF;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
 }
