--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -77,7 +77,7 @@
     }
 }
 
-.advantages__icons {
+.advantages__wrapper {
     @media screen and (max-width: 822px) {
         display: grid;
         justify-content: center;
