--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,61 +1,47 @@
 .advantages {
-    background: #F6F6F6;
-    padding: 70px 0 65px 0;
+    padding: 70px 0 80px 0;
+    background-color: #f6f6f6;
 
-    h2 {
-        margin: 0 auto;
-        color: #0D0D0D;
-        text-align: center;
-        font-size: 30px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 30px;
-        text-transform: uppercase;
-    }
-
-    &__icons {
+    &__wrapper {
+        margin-top: 65px;
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        margin-top: 65px;
     }
 
-    &__icon {
-        color: #0D0D0D;
-        text-align: center;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
+    &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 238px;
+    }
 
-        img {
-            display: block;
-            margin: 0 auto;
-            margin-bottom: 30px;
+    &__subtitle {
+        margin-top: 38px;
+        color: #0d0d0d;
+        font-size: 18px;
+        font-weight: 700;
+    }
+
+    &__descr {
+        margin-top: 26px;
+        color: #0d0d0d;
+        font-size: 14px;
+        font-weight: 300;
+        text-align: center;
+
+        a {
+            color: #ff0000;
+            text-decoration: underline;
         }
     }
 
-    &__text {
-        margin-top: 20px;
-        width: 269px;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 18px;
+    &__icon {
+        &_animated {
+            animation: heartbeat 1.5s ease infinite;
 
-        a {
-            color: #F00;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 300;
-            line-height: 18px;
-            text-decoration-line: underline;
-            text-decoration-style: solid;
-            text-decoration-skip-ink: none;
-            text-decoration-thickness: auto;
-            text-underline-offset: auto;
-            text-underline-position: from-font;
-            text-transform: uppercase;
+            &:hover {
+                animation-play-state: paused;
+            }
         }
     }
 }
