--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -2,6 +2,10 @@
     height: 630px;
     position: relative;
 
+    &__maps {
+        width: 100%;
+    }
+
     &__info {
         position: absolute;
         top: 0;
