--- a/src/sass/libs/_font.scss
+++ b/src/sass/libs/_font.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'MuseoSans';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-100.woff') format(woff),
         url('../fonts/MuseoSansCyrl-300.woff') format(woff),
         url('../fonts/MuseoSansCyrl-500.woff') format(woff),
