--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,9 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/font';
+@import 'libs/tiny-slider';
+@import 'libs/animate.min';
+
+
 @import 'bace/variables';
 @import 'bace/animation';
 
